working nav bar initial

--- a/css/main.css
+++ b/css/main.css
@@ -9,7 +9,7 @@
 #sidebar li a{
   display: block;
   width: 60px;
-  padding-top: 75px;
+  padding-top:1px;
 }
 #sidebar ul{
   list-style: none;
@@ -23,6 +23,9 @@
 }
 .profile{
   text-align: center;
+}
+.profile p{
+  font-size: 16pt;
 }
 .social{
   text-align: center;
